spin_admin/tom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nersc.gov/clustername: production
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
  generation: 1
  labels:
    cattle.io/creator: norman
  name: tom-desc-app
  namespace: desc-tom
  selfLink: /apis/networking.k8s.io/v1/namespaces/desc-tom/ingresses/tom-app
spec:
  ingressClassName: nginx
  rules:
  - host: tom-desc-app.desc-tom.production.svc.spin.nersc.org
    http:
      paths:
      - backend:
          service:
            name: tom-ingress-service
            port:
              number: 8080
        pathType: ImplementationSpecific
  - host: desc-tom.lbl.gov
    http:
      paths:
      - backend:
          service:
            name: tom-ingress-service
            port:
              number: 8080
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - desc-tom.lbl.gov
    secretName: tom-cert
